PR/50820: David Binderman: Fail when !(edge|pulse) instead of !edge && edge